# tekfor-game

./: .gitignore  .luarc.json  Cargo.toml  LICENSE  pack.sh
.github/workflows/: ci-matrix.yml  reusable-rust.yml
api_modules/: utils.lua
api_stubs/: entity.lua  game_events.lua  lock_picking.lua  shared.lua  utils.lua  world.lua
assets/materials/: crt.glsl  vertex.glsl
assets/raw/textures/: crate.aseprite  door-closed.aseprite  door-locked.aseprite  door-open.aseprite  door-unlocked.aseprite  fireball.aseprite  player.aseprite  pressure-plate.aseprite  saw.aseprite  wall-horizontal-left-edge.aseprite  wall-horizontal-lower-split.aseprite  wall-horizontal-right-edge.aseprite  wall-horizontal-upper-split.aseprite  wall-horizontal.aseprite  wall-left-lower-corner.aseprite  wall-left-upper-corner.aseprite  wall-right-lower-corner.aseprite  wall-right-upper-corner.aseprite  wall-vertical-bottom-edge.aseprite  wall-vertical-left-split.aseprite  wall-vertical-right-split.aseprite  wall-vertical-top-edge.aseprite  (+1 more)
game_api/: player.lua  world.lua
levels/: test.level
scripts/: door.lua  downstairs.lua  fireball.lua  fireball_thrower.lua  pressure_plate.lua  push_crate.lua  saw.lua  test.lua
src/: asset.rs  components.rs  core.rs  game_state.rs  lib.rs  lua_api.rs  main.rs  resources.rs  serialize.rs  settings.rs  utils.rs
src/game/: grid.rs  state.rs
src/level/: editor.rs
src/scripting/: engine.rs
src/states/: editor.rs  gameplay.rs  menu.rs  mod.rs
src/systems/: draw.rs  lua.rs  mod.rs  tick.rs
src/world/: grid.rs  mod.rs  serialize.rs  state.rs
(+3 files in other folders)
