[package]
name = "tekfor-game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
hecs = { version = "0.11.0", features = ["serde"] }
macroquad = { version = "0.4.14", features = ["audio", "log"] }
mlua = { version = "0.11.6", features = ["async", "luau", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
lto = true
